--- a/package.json
+++ b/package.json
@@ -16,22 +16,28 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "bwip-js": "^4.6.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
-    "helmet": "^8.0.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "html-pdf": "^3.0.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.1",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "xss-clean": "^0.1.4"
   }
 }
