--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test:customer-product-pagination": "node scripts/check-customer-product-pagination.js"
   },
   "keywords": [],
   "author": "",
